<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4026.11">
  <DUT Name="RampGeneratorInput" Id="{517b22aa-fcdf-4f11-ba92-b12215a269df}">
    <Declaration><![CDATA[TYPE RampGeneratorInput :
STRUCT
	restart : BOOL;
	targetValue : REAL;
	rampTime : UINT := 1;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>