<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4026.8">
  <DUT Name="RecipeStep" Id="{c67477fa-59d3-43d0-9335-dff43a63186e}">
    <Declaration><![CDATA[TYPE RecipeStep :
STRUCT
	sRecipe : STRING(81);
	iRecipe : ARRAY[1..9] OF INT; //Reactor Condition
	rRecipe : ARRAY[1..26] OF REAL; //MFC, EPC Data
	dRecipe : DWORD; //Valve Data
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>